# VISFS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Interface/: CMakeLists.txt
Interface/ROS/: CMakeLists.txt  manifest.xml  package.xml
Interface/ROS/include/: InterfaceROS.h  MsgConversion.h
Interface/ROS/launch/: realcar_localization.launch  rs_camera.launch  rs_t265.launch  simMapping.launch  simStereoMapping.launch  simVISFS.launch  simcar_localization.launch  stereo_sync.launch  test.launch  testIMU.launch
Interface/ROS/params/: amcl.yaml  ekf_fuse.yaml
Interface/ROS/src/: InterfaceROS.cpp  InterfaceROSNode.cpp  MsgConversion.cpp
cmake_modules/: FindCSparse.cmake  FindG2O.cmake
corelib/: CMakeLists.txt
corelib/include/: Estiamtor.h  Estimator.h  Extrapolator.h  LocalMap.h  Manager.h  Monitor.h  MultiviewGeometry.h  OptimizeTypeDefine.h  Optimizer.h  Parameters.h  Signature.h  System.h  Tracker.h
corelib/include/CameraModels/: GeometricCamera.h  PinholeModel.h
corelib/include/Map/: GridInterface.h  ProbabilityValues.h  RangeDataInserterInterface.h  Submaps.h  ValueConversionTables.h
corelib/include/Map/2d/: Grid2d.h  MapLimits.h  ProbabilityGrid.h  ProbabilityGridRangeDataInserter2D.h  RayToPixelMask.h  Submap2D.h  xyIndex.h
corelib/include/Optimizer/: OptimizeTypeDefine.h  Optimizer.h  TypeOccupiedSpace2D.h
corelib/include/Optimizer/ceres/: LocalParameterization.h  OccupiedSpace2dFactor.h  PoseConstraintFactor.h  StereoObservationFactor.h
corelib/include/Optimizer/g2o/: TypeOccupiedSpace2D.h
corelib/include/Sensor/: PointCloud.h  RangeData.h  RangeFinderPoint.h
corelib/src/: Estimator.cpp  Extrapolator.cpp  LocalMap.cpp  Monitor.cpp  MultiviewGeometry.cpp  OptimizeTypeDefine.cpp  Optimizer.cpp  Parameters.cpp  Signature.cpp  System.cpp  Tracker.cpp
corelib/src/CameraModels/: PinholeModel.cpp
corelib/src/Map/: ProbabilityValues.cpp  ValueConversionTables.cpp
corelib/src/Map/2d/: Grid2d.cpp  ProbabilityGrid.cpp  ProbabilityGridRangeDataInserter2D.cpp  RayToPixelMask.cpp  Submap2D.cpp
corelib/src/Optimizer/: OptimizeTypeDefine.cpp  Optimizer.cpp
corelib/src/Optimizer/ceres/: LocalParameterization.cpp  OccupiedSpace2dFactor.cpp  PoseConstraintFactor.cpp  StereoObservationFactor.cpp
corelib/src/Optimizer/g2o/: OptimizeTypeDefine.cpp
corelib/src/Sensor/: PointCloud.cpp  RangeData.cpp
doc/: Stereo&&RGBDBAOptimization.docx  Stereo&&RGBDMotionOptimization.docx  TheStructureOfCode.docx  WheelOdometryMotionOptimization.docx
tests/Map/2d/UT4ProbabilityGrid/: CMakeLists.txt  UT4ProbabilityGrid.cpp
tests/Map/2d/UT4ProbabilityValues/: CMakeLists.txt  UT4ProbabilityValues.cpp
tests/Map/2d/UT4RayToPixelMask/: CMakeLists.txt  UT4RayToPixelMask.cpp
tests/Map/2d/UT4Submap2D/: CMakeLists.txt  UT4Submap2D.cpp
utilite/: CMakeLists.txt
utilite/include/: Conversion.h  Log.h  Math.h  Memory.h  ProcessInfo.h  Stl.h  Timer.h
utilite/src/: Conversion.cpp  Log.cpp  Math.cpp  ProcessInfo.cpp  Timer.cpp
