<package format="2">
	<name> VISFS </name>
	<version> 1.0.0 </version>
    <description> VISFS </description>
	<author> Eddy Zhang </author>
	<maintainer email="zhanghy@amyrobotics.com">Eddy Zhang</maintainer>
	
	<license>TODO</license>

	<!-- wiki -->
	<!-- <url type="website">http://xxxx</url> -->

	<author email="zhanghy@amyrobotics.com">Eddy Zhang</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>tf_conversions</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>image_geometry</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>pcl_conversions</build_depend>
	<build_depend>message_filters</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>dynamic_reconfigure</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<build_export_depend>tf</build_export_depend>
	<build_export_depend>tf_conversions</build_export_depend>
	<build_export_depend>image_transport</build_export_depend>
	<build_export_depend>image_geometry</build_export_depend>
	<build_export_depend>cv_bridge</build_export_depend>
	<build_export_depend>pcl_conversions</build_export_depend>
	<build_export_depend>message_filters</build_export_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>dynamic_reconfigure</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>tf</exec_depend>
	<exec_depend>tf_conversions</exec_depend>
	<exec_depend>image_transport</exec_depend>
	<exec_depend>image_geometry</exec_depend>
	<exec_depend>cv_bridge</exec_depend>
	<exec_depend>pcl_conversions</exec_depend>
	<exec_depend>message_filters</exec_depend>

</package>